[Add] Added the optimized swagger configuration
