# src/controllers/auth.controller.ts
@@ -3,6 +3,7 @@ import prisma from "../config/prisma";
 import ApiResponse from "../utils/ApiResponse";
 import bcrypt from "bcrypt";
 import { signToken } from "../utils/jwt.utils";
+import { CreateUser } from "../types/requests/requests.payload.type";
 
 const AuthRouter = Router();
 
@@ -10,8 +11,18 @@ AuthRouter.post("/register", async (req, res) => {
   /*
     #swagger.tags = ['Auth']
      */
+
+    /* #swagger.parameters['createUser'] = {
+        in: 'body',
+        description: 'User information',
+        required: true,
+        type: 'object',
+        schema: { $ref: "#/definitions/CreateUser" }
+    } */
+
   try {
-    const { email, password, phoneNumber, fullNames } = req.body;
+    const { email, password, phoneNumber, fullName } = req.body as CreateUser;
+    let fullNames = fullName;
     if (!email || !password || !phoneNumber || !fullNames)
       return res.status(400).json({ message: "Please fill all fields" });
     const hashedPassword = await bcrypt.hash(password, 10);
